# invoice_merge_tool

./: .gitignore  AGENTS.md  README.md  README_CN.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: design_tauri.md  product_tauri.md  technical_tauri.md
src/: App.js  App.tsx  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FileList.js  FileList.tsx  MergeSummaryDialog.js  MergeSummaryDialog.tsx
src/lib/: format.js  format.ts  translations.ts  useFilePreviews.ts
src/styles/: main.css
src/types/: index.ts  ui.ts
